--- a/Ecotron/style.css
+++ b/Ecotron/style.css
@@ -8,6 +8,9 @@
 body
 {
 	background-image : url('bg.png');
+	background-repeat: no-repeat;
+	background-repeat: repeat-y;
+	background-size: 100%;
 }
 
 .logo
@@ -16,7 +19,7 @@ body
 	max-width : 60%;
 	height : auto;
 	margin-left: auto;
-  margin-right: auto;
+    margin-right: auto;
 }
 
 p
